@@ -2337,10 +2337,12 @@ long lines if and only if arg is positive."
       (let ((start (point)))
 	(insert "X-Boundary: ")
 	(gnus-add-text-properties start (point) '(invisible t intangible t))
-	(insert (let (str)
-		  (while (>= (window-width) (length str))
+       (insert (let (str (max (window-width)))
+                 (if (featurep 'xemacs)
+                     (setq max (1- max)))
+                 (while (>= max (length str))
 		    (setq str (concat str gnus-body-boundary-delimiter)))
-		  (substring str 0 (window-width)))
+                 (substring str 0 max))
 		"\n")
 	(gnus-put-text-property start (point) 'gnus-decoration 'header)))))
 
